--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "backoff-tower"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2021"
 license = "MIT"
 keywords = ["tower", "backoff"]
@@ -12,7 +12,7 @@ authors = ["Joseph Cheverton-Wynne <jchevertonwynne@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = { version = "1.12", optional = true }
+async-io = { version = "1.13", optional = true }
 pin-project-lite = "0.2"
 tokio = { version = "1.29", optional = true }
 tower = { version = "0.4", features = ["retry"] }
@@ -20,7 +20,7 @@ tower = { version = "0.4", features = ["retry"] }
 [features]
 default = ["tokio"]
 tokio = ["dep:tokio"]
-async_std = ["dep:async-std"]
+async_std = ["dep:async-io"]
 
 [dev-dependencies]
 tokio = { version = "1.29.1", features = ["full"] }
